--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
-MONGODB_URI=mongodb+srv://moaftaab786:VD6VCEjIpEdCLfE5@koinx-backend.5k3ay.mongodb.net/?retryWrites=true&w=majority&appName=koinx-backend
+MONGODB_URI=enter here
 COINGECKO_API_URL=https://api.coingecko.com/api/v3/simple/price
-COINGECKO_API_KEY=CG-YXgPr63ALJP8GWdEif2zxf63
+COINGECKO_API_KEY=Enter here
